<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- El semáforo va primero: es la pantalla de inicio. Lo primero que necesita
         saber el productor al abrir la app es si alguna piscina está en rojo. -->
    <item
        android:id="@+id/nav_semaforo"
        android:icon="@drawable/ic_semaforo"
        android:title="@string/nav_semaforo" />
    <item
        android:id="@+id/nav_registro"
        android:icon="@drawable/ic_pez"
        android:title="@string/nav_registro" />
    <item
        android:id="@+id/nav_historial"
        android:icon="@drawable/ic_historial"
        android:title="@string/nav_historial" />
    <item
        android:id="@+id/nav_sincronizar"
        android:icon="@drawable/ic_sincronizar"
        android:title="@string/nav_sincronizar" />
</menu>
